# time_tracker

./: Cargo.toml  README.md
migrations/: 001_initial_schema.sql  001_initial_schema_down.sql  002_add_productivity.sql  002_add_productivity_down.sql  003_add_indexes.sql  003_add_indexes_down.sql  20240101000000_initial_schema.sql  20240101000001_add_indexes.sql  20240108000000_add_config_table.sql
src/: analysis.rs  app_state.rs  app_tracker.rs  cache.rs  cli.rs  config.rs  error.rs  export.rs  hotkeys.rs  lib.rs  logging.rs  main.rs  pomodoro.rs  shutdown.rs  sync.rs  tray.rs  updater.rs  visualization.rs
src/application/: app.rs  commands.rs  events.rs  mod.rs  queries.rs  services.rs
src/core/: error.rs  mod.rs  models.rs  traits.rs
src/domain/: activity.rs  analysis.rs  config.rs  export.rs  mod.rs  notification.rs  plugin.rs  pomodoro.rs  project.rs  rules.rs
src/infrastructure/: config.rs  logging.rs  mod.rs  platform.rs  storage.rs
src/infrastructure/config/: mod.rs
src/infrastructure/platform/: macos.rs  mod.rs  windows.rs
src/infrastructure/storage/: app_state.rs  migrations.rs  mod.rs  models.rs  queries.rs
src/platform/: mod.rs  windows.rs
src/plugins/: backup.rs  export.rs  loader.rs  mod.rs  registry.rs  stats.rs  traits.rs
src/plugins/builtin/: backup.rs  csv_export.rs  mod.rs  notification.rs  stats.rs  system_notification.rs
src/presentation/: handlers.rs  mod.rs  plugin_manager.rs  state.rs  tray.rs  window.rs
src/presentation/ui/: app.rs  mod.rs  styles.rs
src/presentation/ui/components/: button.rs  card.rs  chart.rs  progress.rs
src/presentation/ui/dialogs/: about.rs  base.rs  confirmation.rs  date_range.rs  export.rs  mod.rs  project.rs  settings.rs
src/presentation/ui/styles/: button.rs  container.rs  mod.rs  text.rs
src/presentation/ui/views/: app_usage.rs  mod.rs  overview.rs  pomodoro.rs  projects.rs  settings.rs  statistics.rs
src/presentation/views/: activity.rs  mod.rs  pomodoro.rs  project.rs  settings.rs  statistics.rs
src/storage/: app_state.rs  migrations.rs  mod.rs  models.rs  queries.rs
src/ui/: app.rs  mod.rs  styles.rs  theme.rs
src/ui/components/: button.rs  card.rs  chart.rs  dialog.rs  input.rs  mod.rs  progress.rs
src/ui/dialogs/: mod.rs
src/ui/views/: app_usage.rs  overview.rs  pomodoro.rs  project.rs  projects.rs  settings.rs  statistics.rs
