[package]
name = "time_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.24"  # egui 框架
egui = "0.24"    # GUI 库
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.28", features = ["bundled", "backup", "chrono"] }
r2d2 = "0.8"
r2d2_sqlite = "0.21"
notify = "6.1"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tray-item = "0.9"
dirs = "5.0"
lru = "0.12"
rand = "0.8"
once_cell = "1.19"

# 图表绘制
plotters = { version = "0.3", features = ["bitmap_backend", "line_series"] }
plotters-backend = "0.3"

# 文件对话框
rfd = "0.12"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "windef",
    "minwindef",
    "shellapi",
    "winbase",
    "errhandlingapi",
]}
winreg = "0.50"
winres = "0.1"

[dev-dependencies]
test-log = "0.2"
tempfile = "3.8"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"