[package]
name = "time_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "migrate"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
eframe = "0.24"
tray-item = "0.9"
async-trait = "0.1"
csv = "1.3"
notify-rust = "4.9"
rfd = "0.12"
iced = { version = "0.10", features = ["tokio", "debug", "canvas"] }
once_cell = "1.19"
objc = "0.2"
core-foundation = "0.9"
libloading = "0.8"